parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> INIT
Rule 1     INIT -> CUERPO_GLOBAL
Rule 2     CUERPO_GLOBAL -> LISTA_GLOBAL
Rule 3     CUERPO_GLOBAL -> <empty>
Rule 4     LISTA_GLOBAL -> LISTA_GLOBAL INSTRUCCION_GLOBAL
Rule 5     LISTA_GLOBAL -> INSTRUCCION_GLOBAL
Rule 6     INSTRUCCION_GLOBAL -> DECLARACION punto_coma
Rule 7     INSTRUCCION_GLOBAL -> ESTRUCTURA punto_coma
Rule 8     INSTRUCCION_GLOBAL -> FUNCION
Rule 9     ESTRUCTURA -> _struct identificador llave_abre CARACTERISTICAS llave_cierra
Rule 10    CARACTERISTICAS -> LISTA_CARACTERISTICAS
Rule 11    CARACTERISTICAS -> <empty>
Rule 12    LISTA_CARACTERISTICAS -> LISTA_CARACTERISTICAS CARACTERISTICA
Rule 13    LISTA_CARACTERISTICAS -> CARACTERISTICA
Rule 14    CARACTERISTICA -> TIPO identificador punto_coma
Rule 15    FUNCION -> TIPO identificador parentesis_abre PARAMETROS parentesis_cierra llave_abre CUERPO_LOCAL llave_cierra
Rule 16    PARAMETROS -> LISTA_PARAMETROS
Rule 17    PARAMETROS -> <empty>
Rule 18    LISTA_PARAMETROS -> LISTA_PARAMETROS coma PARAMETRO
Rule 19    LISTA_PARAMETROS -> PARAMETRO
Rule 20    PARAMETRO -> TIPO identificador
Rule 21    PARAMETRO -> TIPO et identificador
Rule 22    CUERPO_LOCAL -> LISTA_LOCAL
Rule 23    CUERPO_LOCAL -> <empty>
Rule 24    LISTA_LOCAL -> LISTA_LOCAL INSTRUCCION_LOCAL
Rule 25    LISTA_LOCAL -> INSTRUCCION_LOCAL
Rule 26    INSTRUCCION_LOCAL -> ETIQUETA
Rule 27    INSTRUCCION_LOCAL -> SALTO
Rule 28    INSTRUCCION_LOCAL -> DECLARACION punto_coma
Rule 29    INSTRUCCION_LOCAL -> ASIGNACION punto_coma
Rule 30    INSTRUCCION_LOCAL -> IF
Rule 31    INSTRUCCION_LOCAL -> SWITCH
Rule 32    INSTRUCCION_LOCAL -> WHILE
Rule 33    INSTRUCCION_LOCAL -> DO
Rule 34    INSTRUCCION_LOCAL -> FOR
Rule 35    INSTRUCCION_LOCAL -> METODO punto_coma
Rule 36    INSTRUCCION_LOCAL -> _continue punto_coma
Rule 37    INSTRUCCION_LOCAL -> _break punto_coma
Rule 38    INSTRUCCION_LOCAL -> _return EXPRESION punto_coma
Rule 39    METODO -> identificador parentesis_abre EXPRESIONES parentesis_cierra
Rule 40    ETIQUETA -> identificador dos_puntos
Rule 41    SALTO -> _goto identificador punto_coma
Rule 42    DECLARACION -> TIPO LISTA_DECLARACION
Rule 43    LISTA_DECLARACION -> LISTA_DECLARACION coma DECLARACION_FINAL
Rule 44    LISTA_DECLARACION -> DECLARACION_FINAL
Rule 45    DECLARACION_FINAL -> identificador INDICES igual EXPRESION
Rule 46    DECLARACION_FINAL -> identificador INDICES
Rule 47    INDICES -> ACCESOS
Rule 48    INDICES -> <empty>
Rule 49    ACCESOS -> ACCESOS ACCESO
Rule 50    ACCESOS -> ACCESO
Rule 51    ACCESO -> corchete_abre EXPRESION corchete_cierra
Rule 52    ACCESO -> corchete_abre corchete_cierra
Rule 53    ASIGNACION -> identificador INDICES COMPUESTO EXPRESION
Rule 54    ASIGNACION -> identificador INDICES punto identificador COMPUESTO EXPRESION
Rule 55    ASIGNACION -> identificador aumento
Rule 56    ASIGNACION -> identificador decremento
Rule 57    COMPUESTO -> igual
Rule 58    COMPUESTO -> mas igual
Rule 59    COMPUESTO -> asterisco igual
Rule 60    COMPUESTO -> division igual
Rule 61    COMPUESTO -> porcentaje igual
Rule 62    COMPUESTO -> menor menor igual
Rule 63    COMPUESTO -> mayor mayor igual
Rule 64    COMPUESTO -> et igual
Rule 65    COMPUESTO -> elevado igual
Rule 66    COMPUESTO -> pleca igual
Rule 67    IF -> _if parentesis_abre EXPRESION parentesis_cierra llave_abre CUERPO_LOCAL llave_cierra ELSEIFS ELSE
Rule 68    ELSEIFS -> LISTA_ELSEIF
Rule 69    ELSEIFS -> <empty>
Rule 70    LISTA_ELSEIF -> LISTA_ELSEIF ELSEIF
Rule 71    LISTA_ELSEIF -> ELSEIF
Rule 72    ELSEIF -> _elseif parentesis_abre EXPRESION parentesis_cierra llave_abre CUERPO_LOCAL llave_cierra
Rule 73    ELSE -> _else llave_abre CUERPO_LOCAL llave_cierra
Rule 74    ELSE -> <empty>
Rule 75    SWITCH -> _switch parentesis_abre EXPRESION parentesis_cierra llave_abre CASES DEFAULT_CASE llave_cierra
Rule 76    CASES -> LISTA_CASE
Rule 77    CASES -> <empty>
Rule 78    LISTA_CASE -> LISTA_CASE CASE
Rule 79    LISTA_CASE -> CASE
Rule 80    CASE -> _case EXPRESION dos_puntos CUERPO_LOCAL
Rule 81    DEFAULT_CASE -> _default dos_puntos CUERPO_LOCAL
Rule 82    WHILE -> _while parentesis_abre EXPRESION parentesis_cierra llave_abre CUERPO_LOCAL llave_cierra
Rule 83    DO -> _do llave_abre CUERPO_LOCAL llave_cierra _while parentesis_abre EXPRESION parentesis_cierra punto_coma
Rule 84    FOR -> _for parentesis_abre DECLARACION punto_coma EXPRESION punto_coma ASIGNACION parentesis_cierra llave_abre CUERPO_LOCAL llave_cierra
Rule 85    EXPRESION -> EXPRESION mas EXPRESION
Rule 86    EXPRESION -> EXPRESION menos EXPRESION
Rule 87    EXPRESION -> EXPRESION asterisco EXPRESION
Rule 88    EXPRESION -> EXPRESION division EXPRESION
Rule 89    EXPRESION -> EXPRESION porcentaje EXPRESION
Rule 90    EXPRESION -> EXPRESION equivale EXPRESION
Rule 91    EXPRESION -> EXPRESION distinto EXPRESION
Rule 92    EXPRESION -> EXPRESION mayor EXPRESION
Rule 93    EXPRESION -> EXPRESION menor EXPRESION
Rule 94    EXPRESION -> EXPRESION mayor_igual EXPRESION
Rule 95    EXPRESION -> EXPRESION menor_igual EXPRESION
Rule 96    EXPRESION -> EXPRESION and EXPRESION
Rule 97    EXPRESION -> EXPRESION or EXPRESION
Rule 98    EXPRESION -> EXPRESION desplazamiento_izquierdo EXPRESION
Rule 99    EXPRESION -> EXPRESION desplazamiento_derecho mayor EXPRESION
Rule 100   EXPRESION -> EXPRESION et EXPRESION
Rule 101   EXPRESION -> EXPRESION pleca EXPRESION
Rule 102   EXPRESION -> EXPRESION elevado EXPRESION
Rule 103   EXPRESION -> EXPRESION pregunta EXPRESION dos_puntos EXPRESION
Rule 104   EXPRESION -> menos EXPRESION
Rule 105   EXPRESION -> exclamacion EXPRESION
Rule 106   EXPRESION -> virgulilla EXPRESION
Rule 107   EXPRESION -> parentesis_abre EXPRESION parentesis_cierra
Rule 108   EXPRESION -> identificador parentesis_abre EXPRESIONES parentesis_cierra
Rule 109   EXPRESION -> identificador punto identificador
Rule 110   EXPRESION -> identificador ACCESOS
Rule 111   EXPRESION -> identificador ACCESOS punto identificador
Rule 112   EXPRESION -> et identificador
Rule 113   EXPRESION -> llave_abre EXPRESIONES llave_cierra
Rule 114   EXPRESION -> _sizeof parentesis_abre TIPO parentesis_cierra
Rule 115   EXPRESION -> caracter
Rule 116   EXPRESION -> cadena
Rule 117   EXPRESION -> entero
Rule 118   EXPRESION -> decimal
Rule 119   EXPRESION -> identificador
Rule 120   EXPRESIONES -> LISTA_EXPRESIONES
Rule 121   EXPRESIONES -> <empty>
Rule 122   LISTA_EXPRESIONES -> LISTA_EXPRESIONES coma EXPRESION
Rule 123   LISTA_EXPRESIONES -> EXPRESION
Rule 124   TIPO -> _int
Rule 125   TIPO -> _char
Rule 126   TIPO -> _double
Rule 127   TIPO -> _float
Rule 128   TIPO -> _struct identificador
Rule 129   TIPO -> _void

Terminals, with rules where they appear

_break               : 37
_case                : 80
_char                : 125
_continue            : 36
_default             : 81
_do                  : 83
_double              : 126
_else                : 73
_elseif              : 72
_float               : 127
_for                 : 84
_goto                : 41
_if                  : 67
_int                 : 124
_return              : 38
_sizeof              : 114
_struct              : 9 128
_switch              : 75
_void                : 129
_while               : 82 83
and                  : 96
asterisco            : 59 87
aumento              : 55
cadena               : 116
caracter             : 115
coma                 : 18 43 122
corchete_abre        : 51 52
corchete_cierra      : 51 52
decimal              : 118
decremento           : 56
desplazamiento_derecho : 99
desplazamiento_izquierdo : 98
distinto             : 91
division             : 60 88
dos_puntos           : 40 80 81 103
elevado              : 65 102
entero               : 117
equivale             : 90
error                : 
et                   : 21 64 100 112
exclamacion          : 105
identificador        : 9 14 15 20 21 39 40 41 45 46 53 54 54 55 56 108 109 109 110 111 111 112 119 128
igual                : 45 57 58 59 60 61 62 63 64 65 66
llave_abre           : 9 15 67 72 73 75 82 83 84 113
llave_cierra         : 9 15 67 72 73 75 82 83 84 113
mas                  : 58 85
mayor                : 63 63 92 99
mayor_igual          : 94
menor                : 62 62 93
menor_igual          : 95
menos                : 86 104
or                   : 97
parentesis_abre      : 15 39 67 72 75 82 83 84 107 108 114
parentesis_cierra    : 15 39 67 72 75 82 83 84 107 108 114
pleca                : 66 101
porcentaje           : 61 89
pregunta             : 103
punto                : 54 109 111
punto_coma           : 6 7 14 28 29 35 36 37 38 41 83 84 84
virgulilla           : 106

Nonterminals, with rules where they appear

ACCESO               : 49 50
ACCESOS              : 47 49 110 111
ASIGNACION           : 29 84
CARACTERISTICA       : 12 13
CARACTERISTICAS      : 9
CASE                 : 78 79
CASES                : 75
COMPUESTO            : 53 54
CUERPO_GLOBAL        : 1
CUERPO_LOCAL         : 15 67 72 73 80 81 82 83 84
DECLARACION          : 6 28 84
DECLARACION_FINAL    : 43 44
DEFAULT_CASE         : 75
DO                   : 33
ELSE                 : 67
ELSEIF               : 70 71
ELSEIFS              : 67
ESTRUCTURA           : 7
ETIQUETA             : 26
EXPRESION            : 38 45 51 53 54 67 72 75 80 82 83 84 85 85 86 86 87 87 88 88 89 89 90 90 91 91 92 92 93 93 94 94 95 95 96 96 97 97 98 98 99 99 100 100 101 101 102 102 103 103 103 104 105 106 107 122 123
EXPRESIONES          : 39 108 113
FOR                  : 34
FUNCION              : 8
IF                   : 30
INDICES              : 45 46 53 54
INIT                 : 0
INSTRUCCION_GLOBAL   : 4 5
INSTRUCCION_LOCAL    : 24 25
LISTA_CARACTERISTICAS : 10 12
LISTA_CASE           : 76 78
LISTA_DECLARACION    : 42 43
LISTA_ELSEIF         : 68 70
LISTA_EXPRESIONES    : 120 122
LISTA_GLOBAL         : 2 4
LISTA_LOCAL          : 22 24
LISTA_PARAMETROS     : 16 18
METODO               : 35
PARAMETRO            : 18 19
PARAMETROS           : 15
SALTO                : 27
SWITCH               : 31
TIPO                 : 14 15 20 21 42 114
WHILE                : 32

Parsing method: LALR

state 0

    (0) S' -> . INIT
    (1) INIT -> . CUERPO_GLOBAL
    (2) CUERPO_GLOBAL -> . LISTA_GLOBAL
    (3) CUERPO_GLOBAL -> .
    (4) LISTA_GLOBAL -> . LISTA_GLOBAL INSTRUCCION_GLOBAL
    (5) LISTA_GLOBAL -> . INSTRUCCION_GLOBAL
    (6) INSTRUCCION_GLOBAL -> . DECLARACION punto_coma
    (7) INSTRUCCION_GLOBAL -> . ESTRUCTURA punto_coma
    (8) INSTRUCCION_GLOBAL -> . FUNCION
    (42) DECLARACION -> . TIPO LISTA_DECLARACION
    (9) ESTRUCTURA -> . _struct identificador llave_abre CARACTERISTICAS llave_cierra
    (15) FUNCION -> . TIPO identificador parentesis_abre PARAMETROS parentesis_cierra llave_abre CUERPO_LOCAL llave_cierra
    (124) TIPO -> . _int
    (125) TIPO -> . _char
    (126) TIPO -> . _double
    (127) TIPO -> . _float
    (128) TIPO -> . _struct identificador
    (129) TIPO -> . _void

    $end            reduce using rule 3 (CUERPO_GLOBAL -> .)
    _struct         shift and go to state 9
    _int            shift and go to state 10
    _char           shift and go to state 11
    _double         shift and go to state 12
    _float          shift and go to state 13
    _void           shift and go to state 14

    INIT                           shift and go to state 1
    CUERPO_GLOBAL                  shift and go to state 2
    LISTA_GLOBAL                   shift and go to state 3
    INSTRUCCION_GLOBAL             shift and go to state 4
    DECLARACION                    shift and go to state 5
    ESTRUCTURA                     shift and go to state 6
    FUNCION                        shift and go to state 7
    TIPO                           shift and go to state 8

state 1

    (0) S' -> INIT .



state 2

    (1) INIT -> CUERPO_GLOBAL .

    $end            reduce using rule 1 (INIT -> CUERPO_GLOBAL .)


state 3

    (2) CUERPO_GLOBAL -> LISTA_GLOBAL .
    (4) LISTA_GLOBAL -> LISTA_GLOBAL . INSTRUCCION_GLOBAL
    (6) INSTRUCCION_GLOBAL -> . DECLARACION punto_coma
    (7) INSTRUCCION_GLOBAL -> . ESTRUCTURA punto_coma
    (8) INSTRUCCION_GLOBAL -> . FUNCION
    (42) DECLARACION -> . TIPO LISTA_DECLARACION
    (9) ESTRUCTURA -> . _struct identificador llave_abre CARACTERISTICAS llave_cierra
    (15) FUNCION -> . TIPO identificador parentesis_abre PARAMETROS parentesis_cierra llave_abre CUERPO_LOCAL llave_cierra
    (124) TIPO -> . _int
    (125) TIPO -> . _char
    (126) TIPO -> . _double
    (127) TIPO -> . _float
    (128) TIPO -> . _struct identificador
    (129) TIPO -> . _void

    $end            reduce using rule 2 (CUERPO_GLOBAL -> LISTA_GLOBAL .)
    _struct         shift and go to state 9
    _int            shift and go to state 10
    _char           shift and go to state 11
    _double         shift and go to state 12
    _float          shift and go to state 13
    _void           shift and go to state 14

    INSTRUCCION_GLOBAL             shift and go to state 15
    DECLARACION                    shift and go to state 5
    ESTRUCTURA                     shift and go to state 6
    FUNCION                        shift and go to state 7
    TIPO                           shift and go to state 8

state 4

    (5) LISTA_GLOBAL -> INSTRUCCION_GLOBAL .

    _struct         reduce using rule 5 (LISTA_GLOBAL -> INSTRUCCION_GLOBAL .)
    _int            reduce using rule 5 (LISTA_GLOBAL -> INSTRUCCION_GLOBAL .)
    _char           reduce using rule 5 (LISTA_GLOBAL -> INSTRUCCION_GLOBAL .)
    _double         reduce using rule 5 (LISTA_GLOBAL -> INSTRUCCION_GLOBAL .)
    _float          reduce using rule 5 (LISTA_GLOBAL -> INSTRUCCION_GLOBAL .)
    _void           reduce using rule 5 (LISTA_GLOBAL -> INSTRUCCION_GLOBAL .)
    $end            reduce using rule 5 (LISTA_GLOBAL -> INSTRUCCION_GLOBAL .)


state 5

    (6) INSTRUCCION_GLOBAL -> DECLARACION . punto_coma

    punto_coma      shift and go to state 16


state 6

    (7) INSTRUCCION_GLOBAL -> ESTRUCTURA . punto_coma

    punto_coma      shift and go to state 17


state 7

    (8) INSTRUCCION_GLOBAL -> FUNCION .

    _struct         reduce using rule 8 (INSTRUCCION_GLOBAL -> FUNCION .)
    _int            reduce using rule 8 (INSTRUCCION_GLOBAL -> FUNCION .)
    _char           reduce using rule 8 (INSTRUCCION_GLOBAL -> FUNCION .)
    _double         reduce using rule 8 (INSTRUCCION_GLOBAL -> FUNCION .)
    _float          reduce using rule 8 (INSTRUCCION_GLOBAL -> FUNCION .)
    _void           reduce using rule 8 (INSTRUCCION_GLOBAL -> FUNCION .)
    $end            reduce using rule 8 (INSTRUCCION_GLOBAL -> FUNCION .)


state 8

    (42) DECLARACION -> TIPO . LISTA_DECLARACION
    (15) FUNCION -> TIPO . identificador parentesis_abre PARAMETROS parentesis_cierra llave_abre CUERPO_LOCAL llave_cierra
    (43) LISTA_DECLARACION -> . LISTA_DECLARACION coma DECLARACION_FINAL
    (44) LISTA_DECLARACION -> . DECLARACION_FINAL
    (45) DECLARACION_FINAL -> . identificador INDICES igual EXPRESION
    (46) DECLARACION_FINAL -> . identificador INDICES

    identificador   shift and go to state 19

    LISTA_DECLARACION              shift and go to state 18
    DECLARACION_FINAL              shift and go to state 20

state 9

    (9) ESTRUCTURA -> _struct . identificador llave_abre CARACTERISTICAS llave_cierra
    (128) TIPO -> _struct . identificador

    identificador   shift and go to state 21


state 10

    (124) TIPO -> _int .

    identificador   reduce using rule 124 (TIPO -> _int .)
    et              reduce using rule 124 (TIPO -> _int .)
    parentesis_cierra reduce using rule 124 (TIPO -> _int .)


state 11

    (125) TIPO -> _char .

    identificador   reduce using rule 125 (TIPO -> _char .)
    et              reduce using rule 125 (TIPO -> _char .)
    parentesis_cierra reduce using rule 125 (TIPO -> _char .)


state 12

    (126) TIPO -> _double .

    identificador   reduce using rule 126 (TIPO -> _double .)
    et              reduce using rule 126 (TIPO -> _double .)
    parentesis_cierra reduce using rule 126 (TIPO -> _double .)


state 13

    (127) TIPO -> _float .

    identificador   reduce using rule 127 (TIPO -> _float .)
    et              reduce using rule 127 (TIPO -> _float .)
    parentesis_cierra reduce using rule 127 (TIPO -> _float .)


state 14

    (129) TIPO -> _void .

    identificador   reduce using rule 129 (TIPO -> _void .)
    et              reduce using rule 129 (TIPO -> _void .)
    parentesis_cierra reduce using rule 129 (TIPO -> _void .)


state 15

    (4) LISTA_GLOBAL -> LISTA_GLOBAL INSTRUCCION_GLOBAL .

    _struct         reduce using rule 4 (LISTA_GLOBAL -> LISTA_GLOBAL INSTRUCCION_GLOBAL .)
    _int            reduce using rule 4 (LISTA_GLOBAL -> LISTA_GLOBAL INSTRUCCION_GLOBAL .)
    _char           reduce using rule 4 (LISTA_GLOBAL -> LISTA_GLOBAL INSTRUCCION_GLOBAL .)
    _double         reduce using rule 4 (LISTA_GLOBAL -> LISTA_GLOBAL INSTRUCCION_GLOBAL .)
    _float          reduce using rule 4 (LISTA_GLOBAL -> LISTA_GLOBAL INSTRUCCION_GLOBAL .)
    _void           reduce using rule 4 (LISTA_GLOBAL -> LISTA_GLOBAL INSTRUCCION_GLOBAL .)
    $end            reduce using rule 4 (LISTA_GLOBAL -> LISTA_GLOBAL INSTRUCCION_GLOBAL .)


state 16

    (6) INSTRUCCION_GLOBAL -> DECLARACION punto_coma .

    _struct         reduce using rule 6 (INSTRUCCION_GLOBAL -> DECLARACION punto_coma .)
    _int            reduce using rule 6 (INSTRUCCION_GLOBAL -> DECLARACION punto_coma .)
    _char           reduce using rule 6 (INSTRUCCION_GLOBAL -> DECLARACION punto_coma .)
    _double         reduce using rule 6 (INSTRUCCION_GLOBAL -> DECLARACION punto_coma .)
    _float          reduce using rule 6 (INSTRUCCION_GLOBAL -> DECLARACION punto_coma .)
    _void           reduce using rule 6 (INSTRUCCION_GLOBAL -> DECLARACION punto_coma .)
    $end            reduce using rule 6 (INSTRUCCION_GLOBAL -> DECLARACION punto_coma .)


state 17

    (7) INSTRUCCION_GLOBAL -> ESTRUCTURA punto_coma .

    _struct         reduce using rule 7 (INSTRUCCION_GLOBAL -> ESTRUCTURA punto_coma .)
    _int            reduce using rule 7 (INSTRUCCION_GLOBAL -> ESTRUCTURA punto_coma .)
    _char           reduce using rule 7 (INSTRUCCION_GLOBAL -> ESTRUCTURA punto_coma .)
    _double         reduce using rule 7 (INSTRUCCION_GLOBAL -> ESTRUCTURA punto_coma .)
    _float          reduce using rule 7 (INSTRUCCION_GLOBAL -> ESTRUCTURA punto_coma .)
    _void           reduce using rule 7 (INSTRUCCION_GLOBAL -> ESTRUCTURA punto_coma .)
    $end            reduce using rule 7 (INSTRUCCION_GLOBAL -> ESTRUCTURA punto_coma .)


state 18

    (42) DECLARACION -> TIPO LISTA_DECLARACION .
    (43) LISTA_DECLARACION -> LISTA_DECLARACION . coma DECLARACION_FINAL

    punto_coma      reduce using rule 42 (DECLARACION -> TIPO LISTA_DECLARACION .)
    coma            shift and go to state 22


state 19

    (15) FUNCION -> TIPO identificador . parentesis_abre PARAMETROS parentesis_cierra llave_abre CUERPO_LOCAL llave_cierra
    (45) DECLARACION_FINAL -> identificador . INDICES igual EXPRESION
    (46) DECLARACION_FINAL -> identificador . INDICES
    (47) INDICES -> . ACCESOS
    (48) INDICES -> .
    (49) ACCESOS -> . ACCESOS ACCESO
    (50) ACCESOS -> . ACCESO
    (51) ACCESO -> . corchete_abre EXPRESION corchete_cierra
    (52) ACCESO -> . corchete_abre corchete_cierra

    parentesis_abre shift and go to state 23
    igual           reduce using rule 48 (INDICES -> .)
    coma            reduce using rule 48 (INDICES -> .)
    punto_coma      reduce using rule 48 (INDICES -> .)
    corchete_abre   shift and go to state 27

    INDICES                        shift and go to state 24
    ACCESOS                        shift and go to state 25
    ACCESO                         shift and go to state 26

state 20

    (44) LISTA_DECLARACION -> DECLARACION_FINAL .

    coma            reduce using rule 44 (LISTA_DECLARACION -> DECLARACION_FINAL .)
    punto_coma      reduce using rule 44 (LISTA_DECLARACION -> DECLARACION_FINAL .)


state 21

    (9) ESTRUCTURA -> _struct identificador . llave_abre CARACTERISTICAS llave_cierra
    (128) TIPO -> _struct identificador .

    llave_abre      shift and go to state 28
    identificador   reduce using rule 128 (TIPO -> _struct identificador .)


state 22

    (43) LISTA_DECLARACION -> LISTA_DECLARACION coma . DECLARACION_FINAL
    (45) DECLARACION_FINAL -> . identificador INDICES igual EXPRESION
    (46) DECLARACION_FINAL -> . identificador INDICES

    identificador   shift and go to state 30

    DECLARACION_FINAL              shift and go to state 29

state 23

    (15) FUNCION -> TIPO identificador parentesis_abre . PARAMETROS parentesis_cierra llave_abre CUERPO_LOCAL llave_cierra
    (16) PARAMETROS -> . LISTA_PARAMETROS
    (17) PARAMETROS -> .
    (18) LISTA_PARAMETROS -> . LISTA_PARAMETROS coma PARAMETRO
    (19) LISTA_PARAMETROS -> . PARAMETRO
    (20) PARAMETRO -> . TIPO identificador
    (21) PARAMETRO -> . TIPO et identificador
    (124) TIPO -> . _int
    (125) TIPO -> . _char
    (126) TIPO -> . _double
    (127) TIPO -> . _float
    (128) TIPO -> . _struct identificador
    (129) TIPO -> . _void

    parentesis_cierra reduce using rule 17 (PARAMETROS -> .)
    _int            shift and go to state 10
    _char           shift and go to state 11
    _double         shift and go to state 12
    _float          shift and go to state 13
    _struct         shift and go to state 35
    _void           shift and go to state 14

    TIPO                           shift and go to state 31
    PARAMETROS                     shift and go to state 32
    LISTA_PARAMETROS               shift and go to state 33
    PARAMETRO                      shift and go to state 34

state 24

    (45) DECLARACION_FINAL -> identificador INDICES . igual EXPRESION
    (46) DECLARACION_FINAL -> identificador INDICES .

    igual           shift and go to state 36
    coma            reduce using rule 46 (DECLARACION_FINAL -> identificador INDICES .)
    punto_coma      reduce using rule 46 (DECLARACION_FINAL -> identificador INDICES .)


state 25

    (47) INDICES -> ACCESOS .
    (49) ACCESOS -> ACCESOS . ACCESO
    (51) ACCESO -> . corchete_abre EXPRESION corchete_cierra
    (52) ACCESO -> . corchete_abre corchete_cierra

    igual           reduce using rule 47 (INDICES -> ACCESOS .)
    coma            reduce using rule 47 (INDICES -> ACCESOS .)
    punto_coma      reduce using rule 47 (INDICES -> ACCESOS .)
    punto           reduce using rule 47 (INDICES -> ACCESOS .)
    mas             reduce using rule 47 (INDICES -> ACCESOS .)
    asterisco       reduce using rule 47 (INDICES -> ACCESOS .)
    division        reduce using rule 47 (INDICES -> ACCESOS .)
    porcentaje      reduce using rule 47 (INDICES -> ACCESOS .)
    menor           reduce using rule 47 (INDICES -> ACCESOS .)
    mayor           reduce using rule 47 (INDICES -> ACCESOS .)
    et              reduce using rule 47 (INDICES -> ACCESOS .)
    elevado         reduce using rule 47 (INDICES -> ACCESOS .)
    pleca           reduce using rule 47 (INDICES -> ACCESOS .)
    corchete_abre   shift and go to state 27

    ACCESO                         shift and go to state 37

state 26

    (50) ACCESOS -> ACCESO .

    corchete_abre   reduce using rule 50 (ACCESOS -> ACCESO .)
    igual           reduce using rule 50 (ACCESOS -> ACCESO .)
    coma            reduce using rule 50 (ACCESOS -> ACCESO .)
    punto_coma      reduce using rule 50 (ACCESOS -> ACCESO .)
    punto           reduce using rule 50 (ACCESOS -> ACCESO .)
    corchete_cierra reduce using rule 50 (ACCESOS -> ACCESO .)
    mas             reduce using rule 50 (ACCESOS -> ACCESO .)
    menos           reduce using rule 50 (ACCESOS -> ACCESO .)
    asterisco       reduce using rule 50 (ACCESOS -> ACCESO .)
    division        reduce using rule 50 (ACCESOS -> ACCESO .)
    porcentaje      reduce using rule 50 (ACCESOS -> ACCESO .)
    equivale        reduce using rule 50 (ACCESOS -> ACCESO .)
    distinto        reduce using rule 50 (ACCESOS -> ACCESO .)
    mayor           reduce using rule 50 (ACCESOS -> ACCESO .)
    menor           reduce using rule 50 (ACCESOS -> ACCESO .)
    mayor_igual     reduce using rule 50 (ACCESOS -> ACCESO .)
    menor_igual     reduce using rule 50 (ACCESOS -> ACCESO .)
    and             reduce using rule 50 (ACCESOS -> ACCESO .)
    or              reduce using rule 50 (ACCESOS -> ACCESO .)
    desplazamiento_izquierdo reduce using rule 50 (ACCESOS -> ACCESO .)
    desplazamiento_derecho reduce using rule 50 (ACCESOS -> ACCESO .)
    et              reduce using rule 50 (ACCESOS -> ACCESO .)
    pleca           reduce using rule 50 (ACCESOS -> ACCESO .)
    elevado         reduce using rule 50 (ACCESOS -> ACCESO .)
    pregunta        reduce using rule 50 (ACCESOS -> ACCESO .)
    parentesis_cierra reduce using rule 50 (ACCESOS -> ACCESO .)
    llave_cierra    reduce using rule 50 (ACCESOS -> ACCESO .)
    dos_puntos      reduce using rule 50 (ACCESOS -> ACCESO .)


state 27

    (51) ACCESO -> corchete_abre . EXPRESION corchete_cierra
    (52) ACCESO -> corchete_abre . corchete_cierra
    (85) EXPRESION -> . EXPRESION mas EXPRESION
    (86) EXPRESION -> . EXPRESION menos EXPRESION
    (87) EXPRESION -> . EXPRESION asterisco EXPRESION
    (88) EXPRESION -> . EXPRESION division EXPRESION
    (89) EXPRESION -> . EXPRESION porcentaje EXPRESION
    (90) EXPRESION -> . EXPRESION equivale EXPRESION
    (91) EXPRESION -> . EXPRESION distinto EXPRESION
    (92) EXPRESION -> . EXPRESION mayor EXPRESION
    (93) EXPRESION -> . EXPRESION menor EXPRESION
    (94) EXPRESION -> . EXPRESION mayor_igual EXPRESION
    (95) EXPRESION -> . EXPRESION menor_igual EXPRESION
    (96) EXPRESION -> . EXPRESION and EXPRESION
    (97) EXPRESION -> . EXPRESION or EXPRESION
    (98) EXPRESION -> . EXPRESION desplazamiento_izquierdo EXPRESION
    (99) EXPRESION -> . EXPRESION desplazamiento_derecho mayor EXPRESION
    (100) EXPRESION -> . EXPRESION et EXPRESION
    (101) EXPRESION -> . EXPRESION pleca EXPRESION
    (102) EXPRESION -> . EXPRESION elevado EXPRESION
    (103) EXPRESION -> . EXPRESION pregunta EXPRESION dos_puntos EXPRESION
    (104) EXPRESION -> . menos EXPRESION
    (105) EXPRESION -> . exclamacion EXPRESION
    (106) EXPRESION -> . virgulilla EXPRESION
    (107) EXPRESION -> . parentesis_abre EXPRESION parentesis_cierra
    (108) EXPRESION -> . identificador parentesis_abre EXPRESIONES parentesis_cierra
    (109) EXPRESION -> . identificador punto identificador
    (110) EXPRESION -> . identificador ACCESOS
    (111) EXPRESION -> . identificador ACCESOS punto identificador
    (112) EXPRESION -> . et identificador
    (113) EXPRESION -> . llave_abre EXPRESIONES llave_cierra
    (114) EXPRESION -> . _sizeof parentesis_abre TIPO parentesis_cierra
    (115) EXPRESION -> . caracter
    (116) EXPRESION -> . cadena
    (117) EXPRESION -> . entero
    (118) EXPRESION -> . decimal
    (119) EXPRESION -> . identificador

    corchete_cierra shift and go to state 39
    menos           shift and go to state 40
    exclamacion     shift and go to state 42
    virgulilla      shift and go to state 43
    parentesis_abre shift and go to state 44
    identificador   shift and go to state 45
    et              shift and go to state 41
    llave_abre      shift and go to state 46
    _sizeof         shift and go to state 47
    caracter        shift and go to state 48
    cadena          shift and go to state 49
    entero          shift and go to state 50
    decimal         shift and go to state 51

    EXPRESION                      shift and go to state 38

state 28

    (9) ESTRUCTURA -> _struct identificador llave_abre . CARACTERISTICAS llave_cierra
    (10) CARACTERISTICAS -> . LISTA_CARACTERISTICAS
    (11) CARACTERISTICAS -> .
    (12) LISTA_CARACTERISTICAS -> . LISTA_CARACTERISTICAS CARACTERISTICA
    (13) LISTA_CARACTERISTICAS -> . CARACTERISTICA
    (14) CARACTERISTICA -> . TIPO identificador punto_coma
    (124) TIPO -> . _int
    (125) TIPO -> . _char
    (126) TIPO -> . _double
    (127) TIPO -> . _float
    (128) TIPO -> . _struct identificador
    (129) TIPO -> . _void

    llave_cierra    reduce using rule 11 (CARACTERISTICAS -> .)
    _int            shift and go to state 10
    _char           shift and go to state 11
    _double         shift and go to state 12
    _float          shift and go to state 13
    _struct         shift and go to state 35
    _void           shift and go to state 14

    CARACTERISTICAS                shift and go to state 52
    LISTA_CARACTERISTICAS          shift and go to state 53
    CARACTERISTICA                 shift and go to state 54
    TIPO                           shift and go to state 55

state 29

    (43) LISTA_DECLARACION -> LISTA_DECLARACION coma DECLARACION_FINAL .

    coma            reduce using rule 43 (LISTA_DECLARACION -> LISTA_DECLARACION coma DECLARACION_FINAL .)
    punto_coma      reduce using rule 43 (LISTA_DECLARACION -> LISTA_DECLARACION coma DECLARACION_FINAL .)


state 30

    (45) DECLARACION_FINAL -> identificador . INDICES igual EXPRESION
    (46) DECLARACION_FINAL -> identificador . INDICES
    (47) INDICES -> . ACCESOS
    (48) INDICES -> .
    (49) ACCESOS -> . ACCESOS ACCESO
    (50) ACCESOS -> . ACCESO
    (51) ACCESO -> . corchete_abre EXPRESION corchete_cierra
    (52) ACCESO -> . corchete_abre corchete_cierra

    igual           reduce using rule 48 (INDICES -> .)
    coma            reduce using rule 48 (INDICES -> .)
    punto_coma      reduce using rule 48 (INDICES -> .)
    corchete_abre   shift and go to state 27

    INDICES                        shift and go to state 24
    ACCESOS                        shift and go to state 25
    ACCESO                         shift and go to state 26

state 31
